<resources>
    <string name="app_name">Money Knowledge</string>
    <string name="connect">Conectează-te</string>
    <string name="play_as_guest">Play as guest</string>
    <string name="user">Utilizator</string>
    <string name="password">Parolă</string>
    <string name="don_t_have_an_account">Nu ai un cont?</string>
    <string name="register">Înregistreaza-te</string>
    <string name="forgot_your_password">Ți-ai uitat parola?</string>
    <string name="name">Nume</string>
    <string name="email">Email</string>
    <string name="phone">Telefon</string>
    <string name="birth_date">Zi de naștere</string>
    <string name="reset_password">Resetează-ți parola</string>
    <string name="err_name">Te rog scrie un nume valid!</string>
    <string name="err_telefon">Te rog scrie un număr valid de telefon!</string>
    <string name="err_email">Te rog scrie un email valid!</string>
    <string name="err_parola">Parola trebuie să aibe cel puțin 8 caractere.</string>
    <string name="msj_welcome">Bine ai venit!</string>
    <string name="msj_error">Ups! Se pare că a avut loc o eroare!</string>
    <string name="auth_failed">Ne pare rău! Autentificarea nu s-a putut realiza.</string>
    <string name="email_err">Se pare ca este o problema cu email-ul. Scrieți un email inegistrat.</string>
    <string name="inform_email_has_been_sent">Ați primit un email.</string>
    <string name="profile">Profil</string>
    <string name="lessons">Lecții</string>
    <string name="reports">Rapoarte</string>
    <string name="economical_news">Știri economice</string>
    <string name="log_out">Delogează-te</string>
    <string name="update">Editează</string>
    <string name="any_questions">Any questions?</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="money_knowledge">Money Knowledge</string>
    <string name="contactus_mk_com">contactUs@mk.com</string>
    <string name="remember_me">Ține-mă minte</string>
    <string name="economie">Economie</string>
    <string name="my_profile">Profilul meu</string>
    <string name="contact_us">Contactează-ne</string>
    <string name="categories">Categorii</string>
    <string name="expand">Extinde</string>
    <string name="finante">Finanțe</string>
    <string name="contabilitate">Contabilitate</string>
    <string name="renunta">Renunță</string>
    <string name="salveaza">Salvează</string>
    <string name="money">Money</string>
    <string name="knowledge">Knowledge</string>
    <string name="notite">Notițe</string>
    <string name="test">Test</string>
    <string name="notitele_mele">Notițele mele</string>
    <string name="note">Note</string>
    <string name="to">Către: </string>
    <string name="subject">Subiect: </string>
    <string name="message">Mesaj: </string>
    <string name="trimite">Trimite</string>
    <string name="iesi">Ieșire</string>
    <string name="barchart">Bar Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="notele_celorlalti_utilizatori">Notele celorlalți utilizatori</string>
    <string name="notele_mele">Notele mele</string>
    <string name="studiaza_mai_mult">Aprofundează</string>
    <string name="mesaj_more">Vrei să aflii mai multe? Ai putea încerca unul din cursurile de mai jos sau citi din bibliografia recomandată.</string>
    <string name="cursuri">Cursuri</string>
    <string name="carti">Cărți</string>
    <string name="medii">Medii</string>
    <string name="contact_us_text">Scrie-ne dacă ai o întrebare sau dacă ai obserrvat o eroare în aplicație. Îți vom răspunde cât putem de repede.</string>
</resources>