<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_baseline_person_24">

            <menu>
                <group android:checkableBehavior="single">
                <item android:id="@+id/nav_logOut"
                    android:title="@string/log_out"
                    android:icon="@drawable/ic_baseline_arrow_back_24"/>

                <item android:id="@+id/nav_update"
                    android:title="@string/update"
                    android:icon="@drawable/ic_baseline_edit_24"/>
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/nav_lessons"
            android:title="@string/lessons"
            android:icon="@drawable/ic_baseline_menu_book_24"/>

        <item
            android:id="@+id/nav_reports"
            android:title="@string/reports"
            android:icon="@drawable/ic_baseline_multiline_chart_24"/>

        <item
            android:id="@+id/nav_ecNews"
            android:title="@string/economical_news"
            android:icon="@drawable/ic_baseline_monetization_on_24"/>

        <item
            android:id="@+id/nav_questions"
            android:title="@string/any_questions"
            android:icon="@drawable/ic_baseline_comment_24"/>
    </group>

</menu>