<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
            <EditText
                android:id="@+id/input_nume_edit_user_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="8dp" />

            <EditText
                android:id="@+id/input_prenume_edit_user_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/birth_date"
                android:inputType="text"
                android:padding="8dp" />

            <EditText
                android:id="@+id/input_telefon_edit_user_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/phone"
                android:inputType="number"
                android:padding="8dp" />

            <EditText
                android:id="@+id/input_email_edit_user_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="8dp" />
    </LinearLayout>
</ScrollView>