<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.register.LogInActivity"
    android:background="@drawable/back">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_marginTop="30dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="198dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:padding="18dp"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="198dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        android:layout_marginTop="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:padding="18dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/white"
        />



    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/tv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_rememberME"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/rememberMeSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <Switch
        android:id="@+id/rememberMeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_rememberME"
        android:layout_marginTop="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>