<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context=".activities.MessageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/main_menu"
        />

    <com.google.android.material.navigation.NavigationView
        android:background="@color/purple"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity ="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/contact_us"
            android:layout_marginVertical="20dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/round_border_lesson"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/round_border_lesson"
            android:padding="10dp"
            android:hint="@string/message"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            />
        
        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"
            android:text="@string/trimite"
            />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
