<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context=".activities.MoreActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/main_menu"
        />

    <com.google.android.material.navigation.NavigationView
        android:background="@color/purple"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity ="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mesaj_more"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:background="@drawable/curs"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cursuri"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:paddingLeft="110dp"
                />

            <Button
                android:id="@+id/btnClasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/black_transp"
                android:textSize="20sp"
                android:text="@string/expand"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:background="@drawable/books"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carti"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:paddingLeft="110dp"
                />

            <Button
                android:id="@+id/btnBooks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/black_transp"
                android:textSize="20sp"
                android:text="@string/expand"
                />
        </RelativeLayout>

    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>