<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.register.RegisterActivity"
    android:background="@drawable/back">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_marginTop="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="198dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_marginTop="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="18dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawableLeft="@drawable/ic_baseline_person_24" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="198dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawablePadding="5dp"
            android:padding="18dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="198dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:drawablePadding="5dp"
            android:padding="18dp"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBirthDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="198dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPhone"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:drawablePadding="5dp"
            android:inputType="date"
            android:padding="18dp"
            android:drawableStart="@drawable/ic_baseline_cake_24"
            android:drawableLeft="@drawable/ic_baseline_cake_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="198dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilBirthDate"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawablePadding="5dp"
            android:padding="18dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>