<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context=".activities.MyProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/main_menu"
        />

    <com.google.android.material.navigation.NavigationView
        android:background="@color/purple"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity ="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
       />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/profileCV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ll_profile"
            >

        <ImageView
            android:id="@+id/imageView_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/round_border_lesson"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/profileCV"
            app:layout_constraintBottom_toTopOf="@+id/update_profile"
            >

        <TextView
            android:id="@+id/nume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawableTint="@color/white"
            android:textSize="16dp"
            android:gravity="left"
            />

        <TextView
            android:id="@+id/display_nume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="@color/black_transp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:gravity="left"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/birthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:gravity="left"
            android:drawableStart="@drawable/ic_baseline_cake_24"
            android:drawableLeft="@drawable/ic_baseline_cake_24"
            android:drawableTint="@color/white"/>

        <TextView
            android:id="@+id/display_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_transp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:gravity="left"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:gravity="left"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawableTint="@color/white"/>

        <TextView
            android:id="@+id/display_telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_transp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:gravity="left"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:gravity="left"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawableTint="@color/white"/>

        <TextView
            android:id="@+id/display_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:background="@color/black_transp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:gravity="left"
            android:textStyle="bold"/>

        </LinearLayout>

        <Button
            android:id="@+id/update_profile"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:drawableTint="@color/white"
            android:padding="5dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ll_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>
